# Coding-Theory

./: .gitignore  CodingTheory.sln  CodingTheory.vcxproj  CodingTheory.vcxproj.filters  README.md  debug.lp  main.cpp
documentation/: Doku.aux  Doku.tex  Doku.toc
documentation/chapters/: introduction.tex  step1.tex  step2.tex  step3.tex  step4.tex  step5.tex
koehlerlukasSolution/: CMakeLists.txt  README.md  main.cpp
lin-code-gen/: CodingTheory.vcxproj  CodingTheory.vcxproj.filters  LinearCodeGenerator.cpp  LinearCodeGenerator.h  Math.cpp  Math.h  main.cpp
x64/Release/CodingTheory.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CodingTheory.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
